--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll 1</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Moving Text Scroll</h1>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
