--- a/scroll3/03-index.html
+++ b/scroll3/03-index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="03-style.css" />
   </head>
   <body>
-    <section>
+    <section class="sec-1 show-animate">
       <h1 class="animate">Hello World</h1>
+      <p class="animate">Animation Scroll HTML CSS JS</p>
+    </section>
+    <section class="sec-2">
+      <h1 class="animate">Keep Scrolling</h1>
+      <p class="animate">Animation Scroll HTML CSS JS</p>
+    </section>
+    <section class="sec-3">
+      <h1 class="animate">Congratulations!</h1>
       <p class="animate">Animation Scroll HTML CSS JS</p>
     </section>
     <script src="03-script.js"></script>
