--- a/scroll4/04-index.html
+++ b/scroll4/04-index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="04-style.css" />
   </head>
   <body>
-    <div class="holder">
-      <ul class="scroll">
+    <div id="holder" class="holder">
+      <ul id="scroll" class="scroll">
         <li><a href="">Start</a></li>
         <li><a href="">Usa</a></li>
         <li><a href="">Brazil</a></li>
@@ -26,6 +26,7 @@
         <li><a href="">End</a></li>
       </ul>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="04-index.js"></script>
   </body>
 </html>
