--- a/scroll5/05-index.html
+++ b/scroll5/05-index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="05-style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="square"></div>
+    </div>
     <script src="05-index.js"></script>
   </body>
 </html>
